--- a/Midterm/Gil Portfolio/css/style.css
+++ b/Midterm/Gil Portfolio/css/style.css
@@ -156,6 +156,12 @@ table{
   /*border: 1px solid black;*/
   width:100%;
 }
+
+.descrip{
+  margin:0 auto;
+  width:500px;
+}
+
 td{
   padding-top: 50px;
   }
